    decompile_predicate_heads/2-4 and decompile_predicate_indicators/2-4.
    Marked the decompile_predicate_head/4 and decompile_predicate_indicator/4
    as deprecated. Changed the utility predicates that compile/decompile
    predicate heads/indicators to no longer accept conjunctions in the first
    argument.

    Added support for preserving the scope information for operators declared
    using scope directives during compile time.

    Updated the XSB config file in order to support the compilation of modules
    as objects. XSB 3.3 or a later version is now required for compatibility
    with Logtalk.

    Updated the "encodings" example in order to ensure that the there is no
    whitespace before the encoding/1 directive.

    Updated the "attvars" example in order to support B-Prolog and XSB.

    Updated the "profilers" example with preliminary support for the changes
    to execution profiling in the forthcoming SICStus Prolog 4.2 version.


2.42.3 - February 21, 2011

    Allow dynamic predicates declared in a category to be called in "this"
    from within the category. In previous versions, such calls would result
    in a compile-time error, forcing these predicates to be called in "self"
    (using the ::/1 message sending control construct).

    Added Logtalk compiler support for pre-compiled clause heads (using the
    {}/1 control construct). This feature is mostly useful when using the
    term-expansion mechanism.

    Corrected a bug on the code that simplifies the predicate clauses
    generated by the compilation of grammar rules. The code would loop
    when a grammar rule contained a meta-variable, which the Logtalk
    compiler should (but currently don't) report as illegal (the call/1
    control construct should be used instead on this case). Thanks to
    Nicolas Pelletier for the bug report.

    Simplified the compilation of calls in the context of the pseudo-object
    "user".
