@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xsd:schema
 	xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-	version="1.3">
+	version="2.0">
 
 <xsd:annotation>
 	<xsd:documentation>
@@ -30,6 +30,7 @@ The Perl Foundation. Consult the "LICENSE.txt" file for details.
 		<xsd:element name="entity"		type="entity"/>
 		<xsd:element name="relations"	type="relations"/>
 		<xsd:element name="predicates"	type="predicates"/>
+		<xsd:element name="operators"	type="operators"/>
 		<xsd:element name="remarks"		type="remarks"/>
 	</xsd:sequence>
 </xsd:complexType>
@@ -270,6 +271,21 @@ The Perl Foundation. Consult the "LICENSE.txt" file for details.
 		<xsd:element name="description"	type="xsd:string"/>
 		<xsd:element name="call"		type="xsd:string"/>
 		<xsd:element name="bindings"	type="xsd:string"/>
+	</xsd:sequence>
+</xsd:complexType>
+
+
+<xsd:complexType name="operators">
+	<xsd:sequence>
+		<xsd:element name="operator"	type="operator"	minOccurs="0" maxOccurs="unbounded"/>
+	</xsd:sequence>
+</xsd:complexType>
+
+
+<xsd:complexType name="operator">
+	<xsd:sequence>
+		<xsd:element name="term"		type="xsd:string"/>
+		<xsd:element name="scope"		type="scope"/>
 	</xsd:sequence>
 </xsd:complexType>
 
